<resources>
    <string name="app_name">Haraka</string>
    <string name="forgotPassword">Forgot your password</string>
    <string name="forgorPassword2">Forgot your password?</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_question">Don\'t have account?</string>
    <string name="email">Enter Email</string>
    <string name="email2">Email</string>
    <string name="email3">E-mail</string>
    <string name="password">Password</string>
    <string name="email4">Mobile number or email address</string>
    <string name="signup">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="email_sign_up">Email Address</string>
    <string name="address">Enter full address</string>
    <string name="city">City/State</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Already have account?</string>
    <string name="verification">Enter Email or mobile</string>
    <string name="send">SEND</string>
    <string name="validationMs">We have sent varifivation code to Tarekadel460@gmail.com</string>
    <string name="resend">Send again?</string>
    <string name="resend2">Resend</string>
    <string name="validation_code">X X X  X X X</string>
    <string name="confirm">CONFIRM</string>
    <string name="validation_ms2">We  have sent  a verification code to Tarekadel460@gmail.com</string>
    <string name="search">Search</string>
    <string name="validation_code2">X</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="submit">SUBMIT</string>
    <string name="email_verification">Email Verification</string>
    <string name="email_verification_ms">We have sent a verification link to  tarekadel460@gmail.com</string>
    <string name="email_ms2">We have sent a verification link to</string>
    <string name="username">FirstName LastName</string>
    <string name="profile">Profile</string>
    <string name="home">HOME</string>
    <string name="profile2">PROFILE</string>
    <string name="others">Others</string>
    <string name="categories">Categories</string>
    <string name="cat_candy">Candy</string>
    <string name="cat_cand">Candy</string>
    <string name="cat_pills">Pills</string>
    <string name="cat_drinks">Drinks</string>
    <string name="cat_grocery">Grocery</string>
    <string name="cat_candy_snacks"><![CDATA[Candy & Snacks]]></string>
    <string name="grains">Grains</string>
    <string name="herbs_legumes"><![CDATA[Herps & Legumes]]></string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="mobile">Mobile Number</string>
    <string name="signup_address">Full address  (no. street)</string>
    <string name="signup_city">City</string>
    <string name="add_item">+</string>
</resources>