<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECEBED"
    android:filterTouchesWhenObscured="true"
    android:textAlignment="viewStart"
    tools:context=".SignUp">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#79000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#79000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/signup_phone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:maxLength="11"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#79000000"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/signup_address"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#79000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/city"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#79000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/email_sign_up"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email_sign_up"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#79000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/pass_sign_up"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#79000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#79000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="157dp"
                android:layout_height="56dp"
                android:layout_margin="5dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/signup"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account"
                    android:textColor="#000000"
                    android:textColorHighlight="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up" />

                <TextView
                    android:id="@+id/login_link"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:linksClickable="true"
                    android:text="@string/login"
                    android:textColor="#3F51B5"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorLink="#673AB7"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    app:layout_constraintVertical_bias="1.0" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>