<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBED"
    android:backgroundTint="#EAE9EC"
    android:filterTouchesWhenObscured="true"
    android:foregroundTint="#673AB7"
    tools:context=".MainActivity">
    z

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email4"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#88000000"
                android:textColorLink="#3F51B5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="451dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:foregroundTint="#673AB7"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#8B000000"
                android:textColorLink="#3F51B5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="152dp"
                android:layout_height="22dp"
                android:layout_gravity="start"
                android:clickable="true"
                android:linksClickable="true"
                android:text="@string/forgorPassword2"
                android:textColor="#000000"
                android:textColorLink="#673AB7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/login"
                android:layout_width="174dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="#3F51B5"
                android:text="@string/login"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_question"
                    android:textColor="#000000"
                    android:textColorHighlight="#3F51B5"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/sign_up_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:linksClickable="true"
                    android:text="@string/signup"
                    android:textColor="#3F51B5"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorLink="#673AB7"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>