<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/d_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBED"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
        app:layout_constraintVertical_bias="0.148">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B9A4DD"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:logo="@drawable/ic_baseline_home_24"
            app:navigationIcon="@drawable/ic_baseline_format_list_bulleted_24"
            app:popupTheme="@style/Theme.AppCompat.DayNight.NoActionBar"
            app:title="@string/home"
            app:titleMarginStart="20dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/grocery_card"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:contentPadding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView8"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:src="@drawable/grocery" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:text="@string/cat_grocery"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textColorHighlight="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/legumes_card"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:contentPadding="10dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="70dp"
                android:text="@string/herbs_legumes"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textColorHighlight="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView9"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/k_archive_5cce31c3c20f0f4fa192572d652107f0f6404ffe" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/drinks_card"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:contentPadding="10dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:text="@string/cat_drinks"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textColorHighlight="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/soft_drinks" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cand_card"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:contentPadding="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="65dp"
                android:text="@string/cat_candy_snacks"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textColorHighlight="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView11"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/candy_snacks" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ECEBED"
        android:backgroundTint="#ECEBED"
        app:itemIconTint="@color/purple_500"
        app:itemTextColor="#E9000000"
        app:menu="@menu/main_menu"
        app:subheaderColor="#3F51B5" />

</androidx.drawerlayout.widget.DrawerLayout>